added second, two column section including iqos logo

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
       </noscript>
     <![endif]-->
     <style>
-        @font-face {
-            font-family: "iqos-regular";
-            src: url("IQOS\ Fonts/iqos-regular.otf");
-        }
-        @font-face {
-            font-family: "iqos-bold";
-            src: url("IQOS\ Fonts/iqos-bold.otf");
-        }
-        @font-face {
-            font-family: "iqos-light";
-            src: url("IQOS\ Fonts/iqos-light.otf");
-        }
+      @font-face {
+        font-family: "iqos-regular";
+        src: url("IQOS\ Fonts/iqos-regular.otf");
+      }
+      @font-face {
+        font-family: "iqos-bold";
+        src: url("IQOS\ Fonts/iqos-bold.otf");
+      }
+      @font-face {
+        font-family: "iqos-light";
+        src: url("IQOS\ Fonts/iqos-light.otf");
+      }
     </style>
   </head>
   <body
@@ -83,29 +83,117 @@
 <![endif]-->
             <div
               class="outer"
-              style="width: 96%; max-width: 660px; margin: 20px auto"
+              style="width: 96%; max-width: 660px; margin: 20px auto; border: 2px solid black"
             >
-              <table
-                role="presentation"
-                style="width: 100%; border: 0; border-spacing: 0"
-              >
-                <tr>
-                  <td>
-                    <header style="">
-                      <p style="text-align:center; font-family: iqos-bold;">Meet The We Edition IQOS</p>
-                    </header>
-                  </td>
-                </tr>
-              </table>
-              <div
-              class="spacer"
-              style="
-                line-height: 26px;
-                height: 26px;
-                mso-line-height-rule: exactly;
-              "
-            >
+                <table
+                    role="presentation"
+                    style="width: 100%; border: 0; border-spacing: 0"
+                >
+                    <tr>
+                        <td>
+                            <header style="">
+                                <p style="text-align: center; font-family: iqos-bold">
+                                    Meet The We Edition IQOS
+                                </p>
+                            </header>
+                        </td>
+                    </tr>
+                </table>
+
+                <div
+                    class="spacer"
+                    style="
+                    line-height: 26px;
+                    height: 26px;
+                    mso-line-height-rule: exactly;
+                    "
+                >
+                    &nbsp;
+                </div>
+                
+                <div class="two-col" style="text-align: center; font-size: 0">
+                    <!--[if mso]> 
+                <table role="presentation" width="100%"> 
+                <tr> 
+                <td style="width:50%;" valign="middle">
+                <![endif]-->
+                    <div
+                      class="column"
+                      style="
+                        width: 100%;
+                        max-width: 330px;
+                        display: inline-block;
+                        vertical-align: middle;
+                      "
+                    >
+                      <div style="padding: 10px">
+                        <p
+                          style="
+                            margin: 0;
+                            font-family: iqos-regular;
+                            font-size: 14px;
+                            line-height: 18px;
+                          "
+                        >
+                          <img
+                            src="images/iqos-logo.jpg"
+                            width="310"
+                            alt="IQOS logo"
+                            style="
+                              display: block;
+                              width: 310px;
+                              max-width: 100%;
+                              height: auto;
+                            "
+                          />
+                        </p>
+                      </div>
+                    </div>
+                    <!--[if mso]> 
+                </td> 
+                <td style="width:50%;" valign="middle">
+                <![endif]-->
+                    <div
+                      class="column"
+                      style="
+                        width: 100%;
+                        max-width: 330px;
+                        display: inline-block;
+                        vertical-align: middle;
+                      "
+                    >
+                      <div
+                        style="
+                          padding: 10px;
+                          font-size: 14px;
+                          line-height: 18px;
+                        "
+                      >
+
+                        <p
+                          style="
+                            margin-top: 0;
+                            margin-bottom: 14px;
+                            font-family: iqos-regular;
+                          "
+                        >
+                        Win our vibrant new limited edition device
+                        </p>
+
+                      </div>
+                    </div>
+                    <!--[if mso]> 
+                </td> 
+                </tr> 
+                </table> 
+                <![endif]-->
+                  </div>
+
+
+
+
             </div>
+            <!--COMMENT - END OF OUTER DIV -->
             <!--[if mso]> 
 </td> 
 </tr> 
