added product image and title in new table

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                 >
                     <tr>
                         <td>
-                            <header style="">
-                                <p style="text-align: center; font-family: iqos-bold">
+                            <header>
+                                <h1 style="text-align: center; font-family: iqos-bold; font-size: 18px">
                                     Meet The We Edition IQOS
-                                </p>
+                                </h1>
                             </header>
                         </td>
                     </tr>
@@ -121,33 +121,33 @@
                       class="column"
                       style="
                         width: 100%;
-                        max-width: 330px;
+                        max-width: 200px;
                         display: inline-block;
                         vertical-align: middle;
                       "
                     >
-                      <div style="padding: 10px">
-                        <p
-                          style="
-                            margin: 0;
-                            font-family: iqos-regular;
-                            font-size: 14px;
-                            line-height: 18px;
-                          "
-                        >
-                          <img
-                            src="images/iqos-logo.jpg"
-                            width="310"
-                            alt="IQOS logo"
+                        <div style="padding: 10px">
+                            <p
                             style="
-                              display: block;
-                              width: 310px;
-                              max-width: 100%;
-                              height: auto;
+                                margin: 0;
+                                font-family: iqos-regular;
+                                font-size: 14px;
+                                line-height: 18px;
                             "
-                          />
-                        </p>
-                      </div>
+                            >
+                            <img
+                                src="images/iqos-logo.jpg"
+                                width="180"
+                                alt="IQOS logo"
+                                style="
+                                display: block;
+                                width: 180px;
+                                max-width: 100%;
+                                height: auto;
+                                "
+                            />
+                            </p>
+                        </div>
                     </div>
                     <!--[if mso]> 
                 </td> 
@@ -162,34 +162,55 @@
                         vertical-align: middle;
                       "
                     >
-                      <div
-                        style="
-                          padding: 10px;
-                          font-size: 14px;
-                          line-height: 18px;
-                        "
-                      >
-
-                        <p
-                          style="
-                            margin-top: 0;
-                            margin-bottom: 14px;
-                            font-family: iqos-regular;
-                          "
+                        <div
+                            style="
+                            padding: 10px;
+                            font-size: 14px;
+                            line-height: 18px;
+                            "
                         >
-                        Win our vibrant new limited edition device
-                        </p>
 
-                      </div>
+                            <p
+                            style="
+                                margin-top: 0;
+                                margin-bottom: 14px;
+                                font-family: iqos-light;
+                                font-size: 16px
+                            "
+                            >
+                            Win our vibrant new limited edition device
+                            </p>
+
+                        </div>
                     </div>
                     <!--[if mso]> 
                 </td> 
                 </tr> 
                 </table> 
                 <![endif]-->
-                  </div>
+                </div>
 
+                <table
+                  role="presentation"
+                  style="width: 100%; border: 0; border-spacing: 0"
+              >
+                    <tr>
+                        <td>
+                            <img src="./images/main.jpg" alt="'Meet the We Edition IQOS 3 Duo' e-cigarette and case" style="width: 100%; height: auto;"/>
+                        </td>
+                    </tr>
 
+                    <tr>
+                        <td>
+                            <h2 style="margin: 10px 0px; font-family: iqos-bold; text-align: center; font-size: 28px">Limited edition device and accessories</h2>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h2 style="font-family: iqos-bold; text-align: center; font-size: 28px; color: #5FD2D2">now available</h2>
+                        </td>
+                    </tr>
+                </table>
 
 
             </div>
