added random cx data file and functionality to render random placeholder customer names

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         src: url("IQOS\ Fonts/iqos-light.otf");
       }
     </style>
+    <script type="module" sync defer src="./script.js"></script>
   </head>
   <body
     style="
@@ -208,6 +209,26 @@
                     <tr>
                         <td>
                             <h2 style="font-family: iqos-bold; text-align: center; font-size: 28px; color: #5FD2D2">now available</h2>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p style="font-family: iqos-bold; text-align: center; font-size: 28px; color: #5FD2D2">Hello <span id="cx-name"></span></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p style="font-family: iqos-bold; text-align: center; font-size: 28px; color: #5FD2D2">now available</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p style="font-family: iqos-bold; text-align: center; font-size: 28px; color: #5FD2D2">now available</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p style="font-family: iqos-bold; text-align: center; font-size: 28px; color: #5FD2D2">now available</p>
                         </td>
                     </tr>
                 </table>
