--- a/prev.html
+++ b/prev.html
@@ -52,3 +52,95 @@
 
 
 
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+  <div class="two-col" style="text-align: center; font-size: 0">
+    <!--[if mso]> 
+<table role="presentation" width="100%"> 
+<tr> 
+<td style="width:50%;" valign="middle">
+<![endif]-->
+    <div
+      class="column"
+      style="
+        width: 100%;
+        max-width: 200px;
+        display: inline-block;
+        vertical-align: middle;
+      "
+    >
+        <div style="padding: 10px">
+            <p
+            style="
+                margin: 0;
+                font-family: iqos-regular;
+                font-size: 14px;
+                line-height: 18px;
+            "
+            >
+            <img
+                src="images/iqos-logo.jpg"
+                width="180"
+                alt="IQOS logo"
+                style="
+                display: block;
+                width: 180px;
+                max-width: 100%;
+                height: auto;
+                "
+            />
+            </p>
+        </div>
+    </div>
+    <!--[if mso]> 
+</td> 
+<td style="width:50%;" valign="middle">
+<![endif]-->
+    <div
+      class="column"
+      style="
+        width: 100%;
+        max-width: 330px;
+        display: inline-block;
+        vertical-align: middle;
+      "
+    >
+        <div
+            style="
+            padding: 10px;
+            font-size: 14px;
+            line-height: 18px;
+            "
+        >
+
+            <p
+            style="
+                margin-top: 0;
+                margin-bottom: 14px;
+                font-family: iqos-light;
+                font-size: 16px
+            "
+            >
+            Win our vibrant new limited edition device
+            </p>
+
+        </div>
+    </div>
+    <!--[if mso]> 
+</td> 
+</tr> 
+</table> 
+<![endif]-->
+</div>
