--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ div {
                                             width: 180px;
                                             max-width: 100%;
                                             height: auto;
+                                            font-family: iqos-regular
                                             "
                                     />
                                     </p>
@@ -210,7 +211,7 @@ div {
                                         <img
                                         src="./images/main.jpg"
                                         alt="'Meet the We Edition IQOS 3 Duo' vape and case"
-                                        style="width: 100%; height: auto"
+                                        style="width: 100%; height: auto; font-family: iqos-regular"
                                         />
                                     </td>
                                 </tr>
@@ -439,6 +440,7 @@ style="letter-spacing: 25px; mso-font-width: -100%"
                                         max-width: 100%;
                                         height: auto;
                                         border: 10px solid #ffffff;
+                                        font-family: iqos-regular
                                         "
                                     />
                                     </p>
@@ -510,7 +512,7 @@ style="letter-spacing: 25px; mso-font-width: -100%"
                                         src="images/left-vape.jpg"
                                         width="150"
                                         alt="vape with yellow tip"
-                                        style="width: 150px; max-width: 100%; height: auto"
+                                        style="width: 150px; max-width: 100%; height: auto; font-family: iqos-regular"
                                     />
                                     </p>
                                 </div>
@@ -544,7 +546,7 @@ style="letter-spacing: 25px; mso-font-width: -100%"
                                         src="images/middle-vape.jpg"
                                         width="220"
                                         alt="vape with turquoise tip"
-                                        style="width: 220px; max-width: 100%; height: auto"
+                                        style="width: 220px; max-width: 100%; height: auto; font-family: iqos-regular"
                                     />
                                     </p>
                                 </div>
@@ -577,7 +579,7 @@ style="letter-spacing: 25px; mso-font-width: -100%"
                                         src="images/right-vape.jpg"
                                         width="150"
                                         alt="Vape with orange tip"
-                                        style="width: 150px; max-width: 100%; height: auto"
+                                        style="width: 150px; max-width: 100%; height: auto; font-family: iqos-regular"
                                     />
                                     </p>
                                 </div>
@@ -837,6 +839,7 @@ style="letter-spacing: 25px; mso-font-width: -100%"
                                                         width: 100px;
                                                         max-width: 100%;
                                                         height: auto;
+                                                        font-family: iqos-regular
                                                         "
                                                     />
                                                 </p>
